// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button #active 1`] = `
<button
  className="RichEditor-styleButton RichEditor-activeButton"
  onMouseDown={[Function]}
  title={null}
  type="button"
/>
`;

exports[`Button #icon 1`] = `
<button
  className="RichEditor-styleButton"
  onMouseDown={[Function]}
  title={null}
  type="button"
>
  <Icon
    className=""
    name="icon-test"
    title={null}
  />
</button>
`;

exports[`Button #label 1`] = `
<button
  className="RichEditor-styleButton"
  onMouseDown={[Function]}
  title={null}
  type="button"
>
  Test label
</button>
`;

exports[`Button empty 1`] = `
<button
  className="RichEditor-styleButton"
  onMouseDown={[Function]}
  title={null}
  type="button"
/>
`;
